[gd_scene load_steps=2 format=3 uid="uid://cnj5bktqrv8yh"]

[ext_resource type="Script" path="res://scripts/autoloads/debug_console.gd" id="1_console"]

[node name="DebugConsole" type="Node"]
script = ExtResource("1_console")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Debug Console (~ to close)"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="OutputLog" type="RichTextLabel" parent="UI/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
scroll_following = true

[node name="InputLine" type="LineEdit" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Type command (e.g. /help)..."
keep_editing_on_text_submit = true
caret_blink = true

[connection signal="text_submitted" from="UI/Panel/MarginContainer/VBoxContainer/InputLine" to="." method="_on_input_line_text_submitted"]
